# ikita

./: .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
ikita/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: homepage.html  login.html
tests/users/: test_views.py
theme/templates/: base.html
user/migrations/: 0001_initial.py
users/: urls.py  views.py
users/forms/: login.py
users/migrations/: 0001_initial.py
