[project]
name = "ikita"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "django>=5.0.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.0",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true
